--- a/index.html
+++ b/index.html
@@ -3,88 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Artix Runit encrypted installer, LARBS fork">
-  <meta name="author" content="Internetperson-dev">
   <title>Links</title>
+  <style>
+    body {
+      font-family: "Source Sans Pro", sans-serif;
+      background-color: #000;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      text-align: center;
+    }
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+    a {
+      text-decoration: none;
+      color: #fff;
+    }
+    footer {
+      font-size: 0.9rem;
+      margin-top: 1rem;
+    }
+  </style>
+</head>
 <body>
-
-<style>
-
-/* style.css */
-
-@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap");
-
-:root {
-  --text: #000;
-  --bg: #fff;
-}
-
-body {
-  font-family: "Source Sans Pro", sans-serif;
-  background-color: var(--bg);
-  color: var(--text);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --text: #fff;
-    --bg: #000;
-  }
-}
-
-  
-</style>
-
-  <header>
-    <h1 class="md-typescale-display-medium">Useful Links</h1>
-  </header>
-
-  <main>
-    <ul>
-      <li>
-        <a href="https://github.com/Internetperson-dev/artix-runit-install" target="_blank" rel="noopener noreferrer">
-          Linux Installer
-        </a>
-      </li>
-      <li>
-        <a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup" target="_blank" rel="noopener noreferrer">
-          Linux Desktop Setup
-        </a>
-      </li>
-      <li>
-        <a href="https://wolfyxon.github.io/3ds-web-stuff/" target="_blank" rel="noopener noreferrer">
-          3DS Games
-        </a>
-      </li>
-      <li>
-        <a href="http://froxot.de/" target="_blank" rel="noopener noreferrer">
-          3DS Games - 2
-        </a>
-      </li>
-      <li>
-        <a href="https://www.elizium.nu/scripts/lemmings/" target="_blank" rel="noopener noreferrer">
-          Lemmings
-        </a>
-      </li>
-      <li>
-        <a href="https://internetperson-dev.github.io/site/title" target="_blank" rel="noopener noreferrer">
-          Test game
-        </a>
-      </li>
-    </ul>
-
-    <!-- Material Design 3 Button Example -->
-    <md-filled-button href="https://github.com/Internetperson-dev/artix-runit-install" target="_blank">
-      Visit Linux Installer
-    </md-filled-button>
-    <md-outlined-button href="https://github.com/Internetperson-dev/Linux-Desktop-Setup" target="_blank">
-      Visit Desktop Setup
-    </md-outlined-button>
-  </main>
-
-  <footer>
-    <p>Created by Internetperson-dev</p>
-  </footer>
-
+  <h1>Useful Links</h1>
+  <ul>
+    <li><a href="https://github.com/Internetperson-dev/artix-runit-install" target="_blank" rel="noopener noreferrer">Linux Installer</a></li>
+    <li><a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup" target="_blank" rel="noopener noreferrer">Linux Desktop Setup</a></li>
+    <li><a href="https://wolfyxon.github.io/3ds-web-stuff/" target="_blank" rel="noopener noreferrer">3DS Games</a></li>
+    <li><a href="http://froxot.de/" target="_blank" rel="noopener noreferrer">3DS Games - 2</a></li>
+    <li><a href="https://www.elizium.nu/scripts/lemmings/" target="_blank" rel="noopener noreferrer">Lemmings</a></li>
+    <li><a href="https://internetperson-dev.github.io/site/title" target="_blank" rel="noopener noreferrer">Test game</a></li>
+  </ul>
+  <footer>Created by Internetperson-dev</footer>
 </body>
 </html>
