--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Links</title>
   <style>
     body {
-      font-family: "Source Sans Pro", sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; 
       background-color: #000;
       color: #fff;
       margin: 0;
