--- a/index.html
+++ b/index.html
@@ -1,43 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Links</title>
-  <style>
-    body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; 
-      background-color: #000;
-      color: #fff;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      text-align: center;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-    }
-    a {
-      text-decoration: none;
-      color: #fff;
-    }
-    footer {
-      font-size: 0.9rem;
-      margin-top: 1rem;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Links</title>
+<style>
+body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #000; color: #fff; margin: 0; padding: 0; line-height: 1.6; text-align: center;}
+ul {list-style: none; padding: 0;}
+a {text-decoration: none; color: #fff;}
+footer {font-size: 0.9rem; margin-top: 1rem;}
+</style>
 </head>
 <body>
-  <h1>Useful Links</h1>
-  <ul>
-    <li><a href="https://github.com/Internetperson-dev/artix-runit-install" target="_blank" rel="noopener noreferrer">Linux Installer</a></li>
-    <li><a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup" target="_blank" rel="noopener noreferrer">Linux Desktop Setup</a></li>
-    <li><a href="https://wolfyxon.github.io/3ds-web-stuff/" target="_blank" rel="noopener noreferrer">3DS Games</a></li>
-    <li><a href="http://froxot.de/" target="_blank" rel="noopener noreferrer">3DS Games - 2</a></li>
-    <li><a href="https://www.elizium.nu/scripts/lemmings/" target="_blank" rel="noopener noreferrer">Lemmings</a></li>
-    <li><a href="https://internetperson-dev.github.io/site/title" target="_blank" rel="noopener noreferrer">Test game</a></li>
-  </ul>
-  <footer>Created by Internetperson-dev</footer>
+<h1>Useful Links</h1>
+<ul>
+<li><a href="https://github.com/Internetperson-dev/artix-runit-install" target="_blank" rel="noopener noreferrer">Linux Installer</a></li>
+<li><a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup" target="_blank" rel="noopener noreferrer">Linux Desktop Setup</a></li>
+<li><a href="https://wolfyxon.github.io/3ds-web-stuff/" target="_blank" rel="noopener noreferrer">3DS Games</a></li>
+<li><a href="http://froxot.de/" target="_blank" rel="noopener noreferrer">3DS Games - 2</a></li>
+<li><a href="https://www.elizium.nu/scripts/lemmings/" target="_blank" rel="noopener noreferrer">Lemmings</a></li>
+<li><a href="https://internetperson-dev.github.io/site/title" target="_blank" rel="noopener noreferrer">Test game</a></li>
+</ul>
+<footer>Created by Internetperson-dev</footer>
 </body>
 </html>
