--- a/3ds.html
+++ b/3ds.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="topSpace"></div> <!-- Blank div for spacing -->
-    <canvas id="gameCanvas" width="400" height="200"></canvas> <!-- Adjusted width and height -->
-    <script src="game.js"></script>
+    <div id="topSpace"></div>
+    <canvas id="gameCanvas" width="400" height="200"></canvas>
+    <script src="level1.js"></script> <!-- Include level data -->
+    <script src="game.js"></script> <!-- Include game logic -->
 </body>
 </html>
