--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ footer {font-size: 0.9rem; margin-top: 1rem;}
 <li><a href="https://wolfyxon.github.io/3ds-web-stuff/" target="_blank" rel="noopener noreferrer">3DS Games</a></li>
 <li><a href="http://froxot.de/" target="_blank" rel="noopener noreferrer">3DS Games - 2</a></li>
 <li><a href="https://www.elizium.nu/scripts/lemmings/" target="_blank" rel="noopener noreferrer">Lemmings</a></li>
-<li><a href="https://internetperson-dev.github.io/site/title" target="_blank" rel="noopener noreferrer">Test game</a></li>
+<li><a href="https://internetperson-dev.github.io/site/platformer/title.html target="_blank" rel="noopener noreferrer">Test game</a></li>
 </ul>
 <footer>Created by Internetperson-dev</footer>
 </body>
