--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Meta descriptions may be included in search results to concisely summarize page content. Learn more about the meta description.">
 <title>Links</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
 body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #000; color: #fff; margin: 0; padding: 0; line-height: 1.6; text-align: center;}
 ul {list-style: none; padding: 0;}
