--- a/fornite.html
+++ b/fornite.html
@@ -7,18 +7,14 @@
 <title>Fortnite Cloud Play</title>
 <link rel="icon" type="image/x-icon" href="https://www.epicgames.com/favicon.ico">
 <style>
-body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #1B1464; color: #fff; margin: 0; padding: 0; line-height: 1.6; text-align: center;}
-h1 {margin: 1rem 0;}
+body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #000; color: #fff; margin: 0; padding: 0; line-height: 1.6; text-align: center;}
 ul {list-style: none; padding: 0;}
-li {margin: 0.5rem 0;}
-a {text-decoration: none; color: #0078D7; font-size: 1.2rem;}
-a:hover {color: #005BB5;}
-footer {font-size: 0.9rem; margin-top: 2rem;}
+a {text-decoration: none; color: #fff;}
+footer {font-size: 0.9rem; margin-top: 1rem;}
 </style>
 </head>
 <body>
-<h1>Play Fortnite Now!</h1>
-<p>Choose your platform and start playing instantly.</p>
+<h1>Fornite Game Streaming Link PWA</h1>
 <ul>
 <li><a href="https://play.geforcenow.com" target="_blank" rel="noopener noreferrer">Play on GeForce NOW</a></li>
 <li><a href="https://www.xbox.com/en-US/play" target="_blank" rel="noopener noreferrer">Play on Xbox Cloud Gaming</a></li>
