--- a/fornite.html
+++ b/fornite.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Play Fortnite on the cloud with GeForce NOW or Xbox Cloud Gaming, optimized for iPhone.">
+<link rel="manifest" href="manifest.json" />
 <title>Fortnite Cloud Play</title>
 <style>
 body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #000; color: #fff; margin: 0; padding: 0; line-height: 1.6; text-align: center;}
