--- a/fornite.html
+++ b/fornite.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Play Fortnite on the cloud with GeForce NOW or Xbox Cloud Gaming, optimized for iPhone.">
-<link rel="manifest" href="manifest.json" />
+<link rel="manifest" href="manifest.json">
 <title>Fortnite Cloud Play</title>
 <style>
 body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #000; color: #fff; margin: 0; padding: 0; line-height: 1.6; text-align: center;}
@@ -20,5 +20,13 @@ footer {font-size: 0.9rem; margin-top: 1rem;}
 <li><a href="https://www.xbox.com/en-US/play" target="_blank" rel="noopener noreferrer">Play on Xbox Cloud Gaming</a></li>
 </ul>
 <footer>Created by Internetperson-dev</footer>
+<script>
+// Register service worker
+if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('/service-worker.js')
+        .then(() => console.log('Service Worker Registered'))
+        .catch(err => console.error('Service Worker Registration Failed:', err));
+}
+</script>
 </body>
 </html>
