--- a/fornite.html
+++ b/fornite.html
@@ -23,7 +23,7 @@ footer {font-size: 0.9rem; margin-top: 1rem;}
 <script>
 // Register service worker
 if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('/service-worker.js')
+    navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('Service Worker Registered'))
         .catch(err => console.error('Service Worker Registration Failed:', err));
 }
