--- a/fornite.html
+++ b/fornite.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Play Fortnite on the cloud with GeForce NOW or Xbox Cloud Gaming, optimized for iPhone.">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="manifest" href="manifest.json">
 <title>Fortnite Cloud Play</title>
 <style>
