--- a/musicpwa/musictest.html
+++ b/musicpwa/musictest.html
@@ -12,7 +12,7 @@
 <body onload="startUpEvents()">
     <video src="backgrounds/EOEBuildings2.mp4" autoplay loop muted playsinline id="videoBG"></video>
     <nav>
-        <a href="../index.html">Back</a>
+        <a href="https://kinoposts.web.app/index.html">Back</a>
     </nav>
 
     <p>Use the options below to make a playlist of your own!</p>
@@ -20,7 +20,7 @@
     <button onclick="p3go()">/// Test - Load Persona 3 songs///</button>
 
     <audio id="audio" src="loading playlist.mp3" preload="auto"></audio>
-    <script type="text/javascript" src="audioPlayer.js" id="audioPlayerScript" defer></script>
+    <script type="text/javascript" src="https://kinoposts.web.app/test/audioPlayer.js" id="audioPlayerScript" defer></script>
     <div id="audioStatus" class="hidden">
         <span id="BGMName">Music</span></br>
         <button style="vertical-align: middle"><img src="" id="playIcon"></button>
@@ -31,7 +31,7 @@
     <noscript>
         <blockquote class="fail"><b>JAVASCRIPT DISABLED</b><br />
             Javascript is needed to use this page<br />
-            <a href="../changelog.html#jslicense">Javascript license information</a>
+            <a href="I DON'T KNOW WHAT THE CHANGE LOG LINK IS AHHHHHH AH AH AH">Javascript license information</a>
         </blockquote>
     </noscript>
     <hr>
