--- a/musicpwa/musictest.html
+++ b/musicpwa/musictest.html
@@ -4,204 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#000000">
-    <title>Playlist Maker</title>
-    <link rel="stylesheet" href="style.css"> <!-- Ensure this path is correct -->
+    <title>Playlist Maker Embed</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+        iframe {
+            border: none;
+            width: 100%;
+            height: 100vh;
+        }
+    </style>
 </head>
 
-<body onload="startUpEvents()">
-    <video src="backgrounds/EOEBuildings2.mp4" autoplay loop muted playsinline id="videoBG"></video> <!-- Verify path -->
-    <nav>
-        <a href="index.html">Back</a> <!-- Update with a correct path to the homepage -->
-    </nav>
-
-    <p>Use the options below to make a playlist of your own!</p>
-
-    <button onclick="p3go()">/// Test - Load Persona 3 songs///</button>
-
-    <audio id="audio" src="audio/loading_playlist.mp3" preload="auto"></audio> <!-- Correct path -->
-    <script type="text/javascript" src="audioPlayer.js" id="audioPlayerScript" defer></script> <!-- Correct path -->
-
-    <div id="audioStatus" class="hidden">
-        <span id="BGMName">Music</span></br>
-        <button style="vertical-align: middle"><img src="" id="playIcon"></button>
-        <span id="audioProgressBar"></span>
-        &nbsp;<span id="currentTime" class="time">0:00</span> / <span id="totalTime" class="time">0:00</span>
-        <p id="playlistText" class="hidden"></p>
-    </div>
-    <noscript>
-        <blockquote class="fail"><b>JAVASCRIPT DISABLED</b><br />
-            Javascript is needed to use this page<br />
-            <a href="https://www.javascript.com">Learn more about JavaScript</a>
-        </blockquote>
-    </noscript>
-    <hr>
-    <form>
-        <b>General Data</b><br />
-        Playlist's name <input type="text" placeholder="my playlist" id="playlistnameinput"
-            oninput="renderCodeBox()"><br />
-        Uses album art? <input type="checkbox" id="albumArtCheck">
-    </form>
-    <hr>
-    <form id="itemforminput">
-        Audio URL <input type="text" placeholder="Enter URL" id="audioURLinput"><br />
-        <div id="albumArtHideShow" class="hidden">Album art URL <input type="text" placeholder="Enter album art URL"
-                id="albumArtURLinput"><br /></div>
-        <button onclick="addItem()">Add</button>
-        <button onclick="removeLastItem()">Remove</button>
-        <button onclick="setAudioPlayerData()">Start playing</button>
-    </form>
-    <hr>
-
-    <div id="playlistOutputBox" class="codeBox">
-        No playlist data
-    </div><br />
-    <button onclick="copyPlaylist()" id="copiedMessage">Copy playlist data</button>
-    <button onclick="pastePlaylist()">Paste playlist data</button>
-
-    <br /><br /><button onclick="savePlaylist()">Save playlist to localStorage</button>
-    <span class="hidden" id="clearSavedPlaylistButton">
-        <br />There is saved playlist data<br />
-        <button onclick="clearPlaylist()">Clear saved playlist</button>
-        <button onclick="loadSavedPlaylist()">Load saved playlist (start playing)</button>
-    </span>
-
-    <script>
-        // p3 music testing
-        function p3go(){
-            playlisttoinsert = JSON.parse(`["Persona 3 Tracks|true|true","https://kinoposts.web.app/test/persona3/Persona%203%20-%20Junior%20Exam.mp3|https://kinoposts.web.app/test/persona3/p3.jpg","https://kinoposts.web.app/test/persona3/Persona%203%20-%20When%20The%20Moon's%20Reaching%20Out%20Stars.mp3|https://kinoposts.web.app/test/persona3/p3.jpg","https://kinoposts.web.app/test/persona3/Persona%203%20FES%20-%20Brand%20New%20days%20-%20The%20Beginning.mp3|https://kinoposts.web.app/test/persona3/p3fes.jpg","https://kinoposts.web.app/test/persona3/Persona%203%20Portable%20-%20A%20Way%20Of%20Life.mp3|https://kinoposts.web.app/test/persona3/p3p.jpg","https://kinoposts.web.app/test/persona3/Persona%203%20Portable%20-%20Time.mp3|https://kinoposts.web.app/test/persona3/p3p.jpg"]`);
-            loadPlaylist();
-        }
-
-        // setup
-        const playlistName = document.getElementById("playlistnameinput");
-        const albumArtCheckBox = document.getElementById("albumArtCheck");
-        const audioURL = document.getElementById("audioURLinput");
-        const albumArtOption = document.getElementById("albumArtHideShow");
-        const albumArtURL = document.getElementById("albumArtURLinput");
-        const playlistOutput = document.getElementById("playlistOutputBox");
-
-        function startUpEvents() {
-            checkForURLParams();
-            checkAlbumArtCheckBox();
-        }
-
-        function checkForURLParams() {
-            if (window.location.search) { // has params
-                playlisttoinsert = JSON.parse(new URL(window.location).searchParams.get('playlistData'));
-                loadPlaylist();
-                togglePause();
-            }
-        }
-
-        function checkAlbumArtCheckBox() {
-            if (albumArtCheckBox.checked) {
-                albumArtOption.classList.remove("hidden");
-            } else {
-                albumArtOption.classList.add("hidden");
-            }
-        }
-
-        albumArtCheckBox.addEventListener("change", () => {
-            checkAlbumArtCheckBox();
-            renderCodeBox();
-        })
-
-        playlisttoinsert = []
-        document.getElementById("itemforminput").addEventListener("submit", e => {
-            e.preventDefault(); // prevent page reloading
-        });
-
-        function addItem() {
-            let builder = audioURL.value;
-            if (albumArtCheckBox.checked) builder += "|" + albumArtURL.value;
-            audioURL.value = "";
-            albumArtURL.value = "";
-            playlisttoinsert.push(builder);
-            renderCodeBox();
-        }
-
-        function removeLastItem() {
-            playlisttoinsert.pop();
-            renderCodeBox();
-        }
-
-        function renderCodeBox() {
-            playlistOutput.innerHTML = `${(playlistName.value != "") ? playlistName.value : "my playlist"}|${albumArtCheckBox.checked}|false<br/>`;
-            playlisttoinsert.forEach(element => {
-                playlistOutput.innerHTML += `${element}<br/>`;
-            });
-            playlisttoinsert.unshift(playlistName.value + "|" + albumArtCheckBox.checked + "|false");
-            updateURLParam(playlisttoinsert);
-            playlisttoinsert.shift();
-        }
-
-        function setAudioPlayerData() {
-            playlisttoinsert.unshift(playlistName.value + "|" + albumArtCheckBox.checked + "|false");
-            insertPlaylistData(playlisttoinsert);
-            loaded = true;
-            playState = 0;
-            playAudio();
-            playlisttoinsert.shift();
-        }
-
-        // check if there's already saved data
-        const clearSavedPlaylist = document.getElementById("clearSavedPlaylistButton");
-        if (localStorage.getItem("userPlaylist") != null) {
-            clearSavedPlaylist.classList.remove("hidden");
-        }
-
-        // saving and loading
-        function savePlaylist() {
-            playlisttoinsert.unshift(playlistName.value + "|" + albumArtCheckBox.checked);
-            localStorage.setItem("userPlaylist", JSON.stringify(playlisttoinsert));
-            playlisttoinsert.shift();
-            clearSavedPlaylist.classList.remove("hidden");
-        }
-
-        function copyPlaylist() {
-            playlisttoinsert.unshift(playlistName.value + "|" + albumArtCheckBox.checked);
-            navigator.clipboard.writeText(JSON.stringify(playlisttoinsert));
-            playlisttoinsert.shift();
-            document.getElementById("copiedMessage").innerHTML = "Copied!";
-        }
-
-        async function pastePlaylist() {
-            playlisttoinsert = JSON.parse(prompt("Enter playlist data"));
-            loadPlaylist();
-        }
-
-        function clearPlaylist() {
-            localStorage.removeItem("userPlaylist");
-            clearSavedPlaylist.classList.add("hidden");
-        }
-
-        function loadSavedPlaylist() {
-            playlisttoinsert = JSON.parse(localStorage.getItem("userPlaylist"))
-            loadPlaylist();
-        }
-
-        function loadPlaylist() {
-            insertPlaylistData(playlisttoinsert)
-            loaded = true;
-            playAudio();
-
-            playlistName.value = playlisttoinsert[0].split("|")[0];
-            if (playlisttoinsert[0].split("|")[1]){
-                albumArtCheckBox.checked = playlisttoinsert[0].split("|")[1];
-            }
-
-            checkAlbumArtCheckBox();
-            playlisttoinsert.shift();
-            renderCodeBox();
-        }
-
-        function updateURLParam(input) {
-            const url = new URL(window.location.href);
-            url.searchParams.set('playlistData', JSON.stringify(input));
-            window.history.pushState({ path: url.href }, '', url.href);
-        }
-    </script>
+<body>
+    <iframe src="https://kinoposts.web.app/test/playlistmaker.html" title="Playlist Maker"></iframe>
 </body>
 
 </html>
