--- a/musicpwa/musictest.html
+++ b/musicpwa/musictest.html
@@ -23,7 +23,7 @@
     <iframe src="https://kinoposts.web.app/test/playlistmaker.html" title="Playlist Maker"></iframe>
 
 <script> 
-const CACHE_NAME = 'fortnite-pwa-cache-v1';
+const CACHE_NAME = 'ZydezuM';
 const urlsToCache = [
     'https://internetperson-dev.github.io/site/musicpwa/musictest.html',
     'https://kinoposts.web.app/test/playlistmaker.html',
