--- a/musicpwa/musictest.html
+++ b/musicpwa/musictest.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="manifest" href="manifest.json">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playlist Maker Embed</title>
+    <link rel="manifest" href="manifest.json">
     <style>
         body {
             margin: 0;
@@ -20,53 +20,66 @@
 
 <body>
     <iframe src="https://kinoposts.web.app/test/playlistmaker.html" title="Playlist Maker"></iframe>
-<script> 
-const CACHE_NAME = 'ZydezuM';
-const urlsToCache = [
-    'https://internetperson-dev.github.io/site/musicpwa/musictest.html',
-    'https://kinoposts.web.app/test/playlistmaker.html',
-    'https://internetperson-dev.github.io/site/icon-192x192.png',
-    'https://internetperson-dev.github.io/site/icon-512x512.png',
-    'https://kinoposts.web.app/test/style.css', 
-    'https://kinoposts.web.app/test/backgrounds/EOEBuildings2.mp4'  
-    'https://kinoposts.web.app/index.html'  
-    'https://kinoposts.web.app/test/loading playlist.mp3'  
-    'https://internetperson-dev.github.io/site/fornite/script.js'  
-    'https://kinoposts.web.app/test/audioPlayer.js'  
-];
 
-self.addEventListener('install', event => {
-    event.waitUntil(
-        caches.open(CACHE_NAME).then(cache => {
-            return cache.addAll(urlsToCache);
-        }).catch(err => {
-            console.error('Failed to cache resources:', err);
-        })
-    );
-});
+    <script>
+        // Register the service worker if supported by the browser
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js').then((registration) => {
+                    console.log('Service Worker registered with scope:', registration.scope);
+                }).catch((error) => {
+                    console.log('Service Worker registration failed:', error);
+                });
+            });
+        }
 
-self.addEventListener('fetch', event => {
-    event.respondWith(
-        caches.match(event.request).then(response => {
-            return response || fetch(event.request);
-        })
-    );
-});
+        // Service Worker script
+        const CACHE_NAME = 'fortnite-pwa-cache-v1';
+        const urlsToCache = [
+            'https://internetperson-dev.github.io/site/musicpwa/musictest.html',
+            'https://kinoposts.web.app/test/playlistmaker.html',
+            'https://internetperson-dev.github.io/site/icon-192x192.png',
+            'https://internetperson-dev.github.io/site/icon-512x512.png',
+            'https://kinoposts.web.app/test/style.css',
+            'https://kinoposts.web.app/test/backgrounds/EOEBuildings2.mp4',
+            'https://kinoposts.web.app/index.html',
+            'https://kinoposts.web.app/test/loading%20playlist.mp3',
+            'https://internetperson-dev.github.io/site/fornite/script.js',
+            'https://kinoposts.web.app/test/audioPlayer.js'
+        ];
 
-self.addEventListener('activate', event => {
-    event.waitUntil(
-        caches.keys().then(cacheNames => {
-            return Promise.all(
-                cacheNames.map(cache => {
-                    if (cache !== CACHE_NAME) {
-                        return caches.delete(cache);
-                    }
+        self.addEventListener('install', event => {
+            event.waitUntil(
+                caches.open(CACHE_NAME).then(cache => {
+                    console.log('Caching resources...');
+                    return cache.addAll(urlsToCache);
+                }).catch(err => {
+                    console.error('Failed to cache resources:', err);
                 })
             );
-        })
-    );
-});
+        });
 
-</script>
+        self.addEventListener('fetch', event => {
+            event.respondWith(
+                caches.match(event.request).then(response => {
+                    return response || fetch(event.request);
+                })
+            );
+        });
+
+        self.addEventListener('activate', event => {
+            event.waitUntil(
+                caches.keys().then(cacheNames => {
+                    return Promise.all(
+                        cacheNames.map(cache => {
+                            if (cache !== CACHE_NAME) {
+                                return caches.delete(cache);
+                            }
+                        })
+                    );
+                })
+            );
+        });
+    </script>
 </body>
 </html>
