--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ footer {font-size: 0.9rem; margin-top: 1rem;}
 <li><a href="https://internetperson-dev.github.io/site/platformer/title.html" target="_blank" rel="noopener noreferrer">Test game</a></li>
 <li><a href="https://internetperson-dev.github.io/site/fortnite" target="_blank" rel="noopener noreferrer">Fortnite Game Streaming</a></li>
 <li><a href="https://internetperson-dev.github.io/site/musicpwa/musictest.html" target="_blank" rel="noopener noreferrer">Music PWA Test</a></li>
-
-
+<li><a href="https://internetperson-dev.github.io/site/football/index.html" target="_blank" rel="noopener noreferrer">Football PWA Test</a></li>
 </ul>
 <footer>Created by Internetperson-dev</footer>
 </body>
