--- a/yt-good.html
+++ b/yt-good.html
@@ -19,14 +19,14 @@
 
 .video__iframe {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .video__placeholder {
-    width: 100%;
+	width: 100%;
     position: absolute;
 }
 
@@ -35,22 +35,22 @@
     width: 100%;
     height: 0;
     overflow: hidden;
-    position: relative;
+	position: relative;
     object-fit: cover;
     background-color: black;
 }
 
 .video__button {
     background: none;
-    border: 0;
-    cursor: pointer;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    text-indent: -9999px;
-    top: 0;
-    transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-    width: 100%;
+	border: 0;
+	cursor: pointer;
+	height: 100%;
+	left: 0;
+	position: absolute;
+	text-indent: -9999px;
+	top: 0;
+	transition: transform 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	width: 100%;
 }
 
 .video__button:before {
@@ -61,14 +61,15 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: url(youtube-play-dark.svg) no-repeat center center;
+
+    background: url(https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/output.avif) no-repeat center center;
     background-size: 10%; 
 }
 
 .video__button:hover:before {
-    background: url(youtube-play-red.svg) no-repeat center center;
+    background: url(https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/output.avif) no-repeat center center;
     background-size: 10%; 
-} 
+}
 </style>
 
 <script>
