--- a/yt-good.html
+++ b/yt-good.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- Compared to [yt-bad.html](https://web.archive.org/web/20241230231406/https://internetperson-dev.github.io/site/yt-bad.html) [yt-good](https://web.archive.org/web/20241230231558/https://internetperson-dev.github.io/site/yt-good.html) goes from 1.02 MB on load to 22.79KB thanks to lazy loading.  --> 
 <html lang="en">
 <head>
 <meta charset="UTF-8">
