--- a/wasm/wasm.html
+++ b/wasm/wasm.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<body>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>WASM Buttons</title>
-<style>
-  body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #000; color: #fff; margin: 0; padding: 0; line-height: 1.6; text-align: center;}
-  button {margin: 1rem; padding: 0.5rem 1rem; font-size: 1rem;}
-</style>
-
-<script>
-fetch('add.wasm')
-  .then(response => response.arrayBuffer())
-  .then(bytes => WebAssembly.instantiate(bytes))
-  .then(results => {
-    const add = results.instance.exports.add;
-    console.log(add(5, 3));  // Outputs: 8
-  });
-</script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WASM Buttons</title>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+      background: #000;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      text-align: center;
+    }
+    button {
+      margin: 1rem;
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+    }
+  </style>
 </head>
+<body>
+  <h1>WebAssembly Example</h1>
+  <p>Check the console for the WebAssembly addition result.</p>
+  <script>
+    fetch('add.wasm')
+      .then(response => response.arrayBuffer())
+      .then(bytes => WebAssembly.instantiate(bytes))
+      .then(results => {
+        const add = results.instance.exports.add;
+        console.log("The result of adding 5 and 3 is:", add(5, 3)); // Outputs: 8
+      })
+      .catch(error => console.error("Error loading WebAssembly:", error));
+  </script>
 </body>
 </html>
