--- a/index.html
+++ b/index.html
@@ -2,15 +2,65 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 <meta name="description" content="Meta descriptions may be included in search results to concisely summarize page content. Learn more about the meta description.">
 <title>Links</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
-body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #000; color: #fff; margin: 0; padding: 0; line-height: 1.6; text-align: center;}
-ul {list-style: none; padding: 0;}
-a {text-decoration: none; color: #fff;}
-footer {font-size: 0.9rem; margin-top: 1rem;}
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    background: #000;
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+    text-align: center;
+}
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+    display: block;
+    padding: 12px;
+    margin: 8px;
+    font-size: 1.1rem;
+    border-radius: 4px;
+    background: #444;
+    transition: background 0.3s ease;
+}
+
+a:hover {
+    background: #666;
+}
+
+footer {
+    font-size: 0.9rem;
+    margin-top: 1rem;
+}
+
+/* Mobile responsive design */
+@media (max-width: 600px) {
+    h1 {
+        font-size: 1.5rem;
+        padding: 10px;
+    }
+
+    a {
+        font-size: 1rem;
+        padding: 10px;
+        margin: 6px;
+    }
+
+    footer {
+        font-size: 0.8rem;
+        margin-top: 2rem;
+    }
+}
 </style>
 </head>
 <body>
