--- a/index.html
+++ b/index.html
@@ -61,6 +61,36 @@ footer {
         margin-top: 2rem;
     }
 }
+
+/* Desktop layout (no changes for screens larger than 600px) */
+@media (min-width: 601px) {
+    ul {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 0 auto;
+        padding: 0;
+        max-width: 1200px;
+    }
+
+    li {
+        margin: 10px;
+        width: 180px;
+        text-align: center;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+        margin-top: 30px;
+    }
+
+    a {
+        font-size: 1.2rem;
+        padding: 14px;
+        background: #555;
+        border-radius: 8px;
+    }
+}
 </style>
 </head>
 <body>
