--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <title>Links</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
+/* Default (Desktop) Styles */
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     background: #000;
@@ -20,6 +21,17 @@ body {
 ul {
     list-style: none;
     padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 auto;
+    max-width: 1200px;
+}
+
+li {
+    margin: 10px;
+    width: 180px;
+    text-align: center;
 }
 
 a {
@@ -43,52 +55,33 @@ footer {
     margin-top: 1rem;
 }
 
-/* Mobile responsive design */
+/* Mobile Styles (only apply for smaller screens) */
 @media (max-width: 600px) {
     h1 {
         font-size: 1.5rem;
         padding: 10px;
     }
 
+    ul {
+        padding: 0;
+    }
+
+    li {
+        width: 100%;
+        margin: 6px 0;
+    }
+
     a {
         font-size: 1rem;
         padding: 10px;
         margin: 6px;
+        background: #444;
+        border-radius: 4px;
     }
 
     footer {
         font-size: 0.8rem;
         margin-top: 2rem;
-    }
-}
-
-/* Desktop layout (no changes for screens larger than 600px) */
-@media (min-width: 601px) {
-    ul {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin: 0 auto;
-        padding: 0;
-        max-width: 1200px;
-    }
-
-    li {
-        margin: 10px;
-        width: 180px;
-        text-align: center;
-    }
-
-    h1 {
-        font-size: 2.5rem;
-        margin-top: 30px;
-    }
-
-    a {
-        font-size: 1.2rem;
-        padding: 14px;
-        background: #555;
-        border-radius: 8px;
     }
 }
 </style>
