--- a/index.html
+++ b/index.html
@@ -2,88 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Meta descriptions may be included in search results to concisely summarize page content. Learn more about the meta description.">
 <title>Links</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
-/* Default (Desktop) Styles */
-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    background: #000;
-    color: #fff;
-    margin: 0;
-    padding: 0;
-    line-height: 1.6;
-    text-align: center;
-}
-
-ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin: 0 auto;
-    max-width: 1200px;
-}
-
-li {
-    margin: 10px;
-    width: 180px;
-    text-align: center;
-}
-
-a {
-    text-decoration: none;
-    color: #fff;
-    display: block;
-    padding: 12px;
-    margin: 8px;
-    font-size: 1.1rem;
-    border-radius: 4px;
-    background: #444;
-    transition: background 0.3s ease;
-}
-
-a:hover {
-    background: #666;
-}
-
-footer {
-    font-size: 0.9rem;
-    margin-top: 1rem;
-}
-
-/* Mobile Styles (only apply for smaller screens) */
-@media (max-width: 600px) {
-    h1 {
-        font-size: 1.5rem;
-        padding: 10px;
-    }
-
-    ul {
-        padding: 0;
-    }
-
-    li {
-        width: 100%;
-        margin: 6px 0;
-    }
-
-    a {
-        font-size: 1rem;
-        padding: 10px;
-        margin: 6px;
-        background: #444;
-        border-radius: 4px;
-    }
-
-    footer {
-        font-size: 0.8rem;
-        margin-top: 2rem;
-    }
-}
+body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #000; color: #fff; margin: 0; padding: 0; line-height: 1.6; text-align: center;}
+ul {list-style: none; padding: 0;}
+a {text-decoration: none; color: #fff;}
+footer {font-size: 0.9rem; margin-top: 1rem;}
 </style>
 </head>
 <body>
