--- a/index.html
+++ b/index.html
@@ -7,84 +7,26 @@
 <title>Links</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
-body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
-    background: #000;
-    color: #fff;
-    margin: 0;
-    padding: 0;
-    line-height: 1.6;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-}
-
-/* Wrapper to center content */
-.container {
-    width: 90%;
-    max-width: 600px;
-    padding: 20px;
-}
-
-/* Styling for links */
-ul {
-    list-style: none;
-    padding: 0;
-    margin: 20px 0;
-}
-
-ul li {
-    margin: 10px 0;
-}
-
-a {
-    display: block;
-    background: #333;
-    color: #fff;
-    padding: 12px;
-    border-radius: 8px;
-    text-decoration: none;
-    transition: background 0.3s ease;
-}
-
-a:hover {
-    background: #555;
-}
-
-/* Responsive adjustments */
-@media (max-width: 600px) {
-    a {
-        padding: 14px;
-        font-size: 1.1rem;
-    }
-}
-
-footer {
-    font-size: 0.9rem;
-    margin-top: 1rem;
-}
+body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #000; color: #fff; margin: 0; padding: 0; line-height: 1.6; text-align: center;}
+ul {list-style: none; padding: 0;}
+a {text-decoration: none; color: #fff;}
+footer {font-size: 0.9rem; margin-top: 1rem;}
 </style>
 </head>
 <body>
-
-<div class="container">
-    <h1>Useful Links</h1>
-    <ul>
-        <li><a href="https://github.com/Internetperson-dev/artix-runit-install" target="_blank" rel="noopener noreferrer">Linux Installer</a></li>
-        <li><a href="https://github.com/Internetperson-dev/Linux-Desktop-Setup" target="_blank" rel="noopener noreferrer">Linux Desktop Setup</a></li>
-        <li><a href="https://wolfyxon.github.io/3ds-web-stuff/" target="_blank" rel="noopener noreferrer">3DS Games</a></li>
-        <li><a href="http://froxot.de/" target="_blank" rel="noopener noreferrer">3DS Games - 2</a></li>
-        <li><a href="https://www.elizium.nu/scripts/lemmings/" target="_blank" rel="noopener noreferrer">Lemmings</a></li>
-        <li><a href="https://internetperson-dev.github.io/site/platformer/title.html" target="_blank" rel="noopener noreferrer">Test game</a></li>
-        <li><a href="https://internetperson-dev.github.io/site/fortnite" target="_blank" rel="noopener noreferrer">Fortnite Game Streaming</a></li>
-        <li><a href="https://internetperson-dev.github.io/site/musicpwa/musictest.html" target="_blank" rel="noopener noreferrer">Music PWA Test</a></li>
-        <li><a href="https://internetperson-dev.github.io/site/yt-bad.html" target="_blank" rel="noopener noreferrer">yt-bad</a></li>
-        <li><a href="https://internetperson-dev.github.io/site/yt-good.html" target="_blank" rel="noopener noreferrer">yt-good</a></li>
-    </ul>
-    <footer>Created by Internetperson-dev</footer>
-</div>
-
+<h1>Useful Links</h1>
+<ul>
+<li><button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button></li>
+<li><button onclick="location.href='https://github.com/Internetperson-dev/Linux-Desktop-Setup'">Linux Desktop Setup</button></li>
+<li><button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button></li>
+<li><button onclick="location.href='http://froxot.de/'">3DS Games - 2</button></li>
+<li><button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button></li>
+<li><button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test game</button></li>
+<li><button onclick="location.href='https://internetperson-dev.github.io/site/fortnite'">Fortnite Game Streaming</button></li>
+<li><button onclick="location.href='https://internetperson-dev.github.io/site/musicpwa/musictest.html'">Music PWA Test</button></li>
+<li><button onclick="location.href='https://internetperson-dev.github.io/site/yt-bad.html'">yt-bad</button></li>
+<li><button onclick="location.href='https://internetperson-dev.github.io/site/yt-good.html'">yt-good</button></li>
+</ul>
+<footer>Created by Internetperson-dev</footer>
 </body>
 </html>
