--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@ body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvet
 </head>
 <body>
 <h1>Useful Links</h1>
-<ul>
-<li><button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button></li>
-<li><button onclick="location.href='https://github.com/Internetperson-dev/Linux-Desktop-Setup'">Linux Desktop Setup</button></li>
-<li><button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button></li>
-<li><button onclick="location.href='http://froxot.de/'">3DS Games - 2</button></li>
-<li><button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button></li>
-<li><button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test game</button></li>
-<li><button onclick="location.href='https://internetperson-dev.github.io/site/fortnite'">Fortnite Game Streaming</button></li>
-<li><button onclick="location.href='https://internetperson-dev.github.io/site/musicpwa/musictest.html'">Music PWA Test</button></li>
-<li><button onclick="location.href='https://internetperson-dev.github.io/site/yt-bad.html'">yt-bad</button></li>
-<li><button onclick="location.href='https://internetperson-dev.github.io/site/yt-good.html'">yt-good</button></li>
-</ul>
+<button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button></li>
+<button onclick="location.href='https://github.com/Internetperson-dev/Linux-Desktop-Setup'">Linux Desktop Setup</button></li>
+<button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button></li>
+<button onclick="location.href='http://froxot.de/'">3DS Games - 2</button></li>
+<button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button></li>
+<button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test game</button></li>
+<button onclick="location.href='https://internetperson-dev.github.io/site/fortnite'">Fortnite Game Streaming</button></li>
+<button onclick="location.href='https://internetperson-dev.github.io/site/musicpwa/musictest.html'">Music PWA Test</button></li>
+<button onclick="location.href='https://internetperson-dev.github.io/site/yt-bad.html'">yt-bad</button></li>
+<button onclick="location.href='https://internetperson-dev.github.io/site/yt-good.html'">yt-good</button></li>
 <footer>Created by Internetperson-dev</footer>
 </body>
 </html>
