--- a/index.html
+++ b/index.html
@@ -7,21 +7,38 @@
 <title>Links</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
-body {font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background: #000; color: #fff; margin: 0; padding: 0; line-height: 1.6; text-align: center;}
+body { 
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
+    background: #000; 
+    color: #fff; 
+    margin: 0; 
+    padding: 0; 
+    line-height: 1.6; 
+    text-align: center;
+}
+button {
+    display: block;  /* Makes buttons stack vertically */
+    width: 80%;  /* Adjusts button width */
+    margin: 10px auto; /* Centers buttons and adds spacing */
+    padding: 10px;
+    font-size: 1rem;
+}
 </style>
 </head>
 <body>
 <h1>Useful Links</h1>
-<button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button></li>
-<button onclick="location.href='https://github.com/Internetperson-dev/Linux-Desktop-Setup'">Linux Desktop Setup</button></li>
-<button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button></li>
-<button onclick="location.href='http://froxot.de/'">3DS Games - 2</button></li>
-<button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button></li>
-<button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test game</button></li>
-<button onclick="location.href='https://internetperson-dev.github.io/site/fortnite'">Fortnite Game Streaming</button></li>
-<button onclick="location.href='https://internetperson-dev.github.io/site/musicpwa/musictest.html'">Music PWA Test</button></li>
-<button onclick="location.href='https://internetperson-dev.github.io/site/yt-bad.html'">yt-bad</button></li>
-<button onclick="location.href='https://internetperson-dev.github.io/site/yt-good.html'">yt-good</button></li>
+<div>
+    <button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button>
+    <button onclick="location.href='https://github.com/Internetperson-dev/Linux-Desktop-Setup'">Linux Desktop Setup</button>
+    <button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
+    <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
+    <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test game</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/fortnite'">Fortnite Game Streaming</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/musicpwa/musictest.html'">Music PWA Test</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/yt-bad.html'">yt-bad</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/yt-good.html'">yt-good</button>
+</div>
 <footer>Created by Internetperson-dev</footer>
 </body>
 </html>
