--- a/index.html
+++ b/index.html
@@ -3,101 +3,85 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Meta descriptions may be included in search results to concisely summarize page content. Learn more about the meta description.">
-<title>Links</title>
+<meta name="description" content="A fullscreen macOS-like web app.">
+<title>MacOS App</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
-body { 
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; 
-    background: #1e1e1e; 
-    color: #fff; 
-    margin: 0; 
-    padding: 50px 0; 
-    display: flex; 
-    justify-content: center; 
-    align-items: center; 
-    height: 100vh;
+/* Global Styles */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-.window {
-    background: #2d2d2d;
-    border-radius: 12px;
-    width: 400px;
-    box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.3);
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    background: #1e1e1e;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
     overflow: hidden;
 }
 
-.window-header {
-    background: #444;
-    padding: 8px;
+/* Main Container */
+.app {
+    width: 100vw;
+    height: 100vh;
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    border-radius: 12px 12px 0 0;
 }
 
-.window-buttons {
-    display: flex;
-    gap: 6px;
-    padding-left: 10px;
+/* Title */
+h1 {
+    font-size: 2rem;
+    margin-bottom: 20px;
 }
 
-.window-button {
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    display: inline-block;
-}
-
-.red { background: #ff5f57; }
-.yellow { background: #ffbd2e; }
-.green { background: #28c940; }
-
-.window-content {
-    text-align: center;
-    padding: 20px;
-}
-
+/* Buttons */
 button {
-    display: block;
-    width: 100%;
-    margin: 10px 0;
-    padding: 10px;
+    width: 300px;
+    padding: 12px;
+    margin: 8px 0;
     font-size: 1rem;
-    background: #3a3a3a;
     border: none;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.1);
     color: white;
-    border-radius: 6px;
     cursor: pointer;
-    transition: background 0.2s;
+    transition: 0.2s;
+    backdrop-filter: blur(10px);
 }
 
 button:hover {
-    background: #555;
+    background: rgba(255, 255, 255, 0.2);
+}
+
+/* Footer */
+footer {
+    margin-top: 20px;
+    font-size: 0.8rem;
+    opacity: 0.7;
 }
 </style>
 </head>
 <body>
-<div class="window">
-    <div class="window-header">
-        <div class="window-buttons">
-            <span class="window-button red"></span>
-            <span class="window-button yellow"></span>
-            <span class="window-button green"></span>
-        </div>
-    </div>
-    <div class="window-content">
-        <h1>Useful Links</h1>
-        <button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button>
-        <button onclick="location.href='https://github.com/Internetperson-dev/Linux-Desktop-Setup'">Linux Desktop Setup</button>
-        <button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
-        <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
-        <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
-        <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test game</button>
-        <button onclick="location.href='https://internetperson-dev.github.io/site/fortnite'">Fortnite Game Streaming</button>
-        <button onclick="location.href='https://internetperson-dev.github.io/site/musicpwa/musictest.html'">Music PWA Test</button>
-        <button onclick="location.href='https://internetperson-dev.github.io/site/yt-bad.html'">yt-bad</button>
-        <button onclick="location.href='https://internetperson-dev.github.io/site/yt-good.html'">yt-good</button>
-    </div>
+<div class="app">
+    <h1>Useful Links</h1>
+    <button onclick="location.href='https://github.com/Internetperson-dev/artix-runit-install'">Linux Installer</button>
+    <button onclick="location.href='https://github.com/Internetperson-dev/Linux-Desktop-Setup'">Linux Desktop Setup</button>
+    <button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
+    <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
+    <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/fortnite'">Fortnite Game Streaming</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/musicpwa/musictest.html'">Music PWA Test</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/yt-bad.html'">yt-bad</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/yt-good.html'">yt-good</button>
+    <footer>Created by Internetperson-dev</footer>
 </div>
 </body>
 </html>
