--- a/index.html
+++ b/index.html
@@ -21,14 +21,7 @@ body {
 }
 body,
 .app {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 100vh;
-}
-.app {
-  flex-direction: column;
+  align-content: center; <!-- This seems like the the most sane way to center something -->
 }
 h1 {
   font-size: 2rem;
