--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ body {
 }
 body,
 .app {
+  text-align: center;
   align-content: center; <!-- This seems like the the most sane way to center something -->
 }
 h1 {
