--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="A fullscreen macOS-like web app.">
-<title>MacOS App</title>
+<title>Internetperson-dev Useful links</title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <style>
 /* Global Styles */
