--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ button:hover {
     <button onclick="location.href='https://wolfyxon.github.io/3ds-web-stuff/'">3DS Games</button>
     <button onclick="location.href='http://froxot.de/'">3DS Games - 2</button>
     <button onclick="location.href='https://www.elizium.nu/scripts/lemmings/'">Lemmings</button>
+    <button onclick="location.href='https://internetperson-dev.github.io/site/etc/SNES.html'">SNES Emu</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/platformer/title.html'">Test Game</button>
     <button onclick="location.href='https://kinoposts.web.app/test/playlistmaker.html'">Music PWA Test</button>
     <button onclick="location.href='https://internetperson-dev.github.io/site/etc/yt/yt-bad.html'">yt-bad</button>
