--- a/etc/SNES.html
+++ b/etc/SNES.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>Snes9x-2005-wasm</title>
 </head>
 <body>
@@ -394,6 +394,6 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.<br>
   </div>
   <script src="https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/snes9x_2005.js"></script>
   <script src="https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/gamepad.js"></script>
-  <script src="view-source:https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/script.js"></script>
+  <script src="https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/script.js"></script>
 </body>
 </html>
