--- a/etc/SNES.html
+++ b/etc/SNES.html
@@ -394,6 +394,6 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.<br>
   </div>
   <script src="https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/snes9x_2005.js"></script>
   <script src="https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/gamepad.js"></script>
-  <script src="https://raw.githubusercontent.com/Internetperson-dev/site/refs/heads/main/etc/script.js"></script>
+  <script src="https://kazuki-4ys.github.io/web_apps/snes9x-2005-wasm/script.js"></script>
 </body>
 </html>
