--- a/etc/SNES.html
+++ b/etc/SNES.html
@@ -398,7 +398,7 @@ Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.<br>
 
 <script>
   window.onload = function () {
-    const romUrl = "https://github.com/Internetperson-dev/site/raw/refs/heads/main/etc/240pSuite.sfc";
+const romUrl = "https://corsproxy.io/?" + encodeURIComponent("https://github.com/Internetperson-dev/site/raw/refs/heads/main/etc/240pSuite.sfc");
 
     fetch(romUrl)
         .then(response => {
